# JoSIM

./: .gitignore  404.html  CMakeLists.txt  LICENSE  Makefile  README.md  azure-pipelines.release.centos.yml  azure-pipelines.yml  conanfile.py  index.html  mkdocs.yml  refer.bib  search.html  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: build-release.yml
bugs/: index.html
cmake/: CPM.cmake  commit_hash.cmake  conan.cmake  dependencies.cmake  integration_test.cmake  make_static_target.cmake  plotting.cmake  suitesparse.cmake  warnings.cmake
comp_stamps/: index.html
docs/: CNAME  bugs.md  comp_stamps.md  ex_usage.md  index.md  refer.bib  syntax.md  tech_disc.md
docs/javascripts/: config.js
docs/jp/: bugs_jp.md  comp_stamps_jp.md  ex_usage_jp.md  index_jp.md  syntax_jp.md  tech_disc_jp.md
ex_usage/: index.html
include/: compiling_error.txt  components.hpp  errors.hpp  input.hpp  j_components.hpp  j_errors.hpp  j_globals.hpp  j_input.hpp  j_matrix.hpp  j_misc.hpp  j_models.hpp  j_output.hpp  j_plot.hpp  j_simulation.hpp  j_std_include.hpp  matrix.hpp  misc.hpp  models.hpp  simulation.hpp  spline.h  std_include.hpp
include/FL/: Fl.H  Fl_BMP_Image.H  Fl_Bitmap.H  Fl_Browser.H  Fl_Browser_.H  Fl_Button.H  Fl_Cairo.H  Fl_Check_Button.H  Fl_Choice.H  Fl_Copy_Surface.H  Fl_Device.H  Fl_Export.H  Fl_File_Chooser.H  Fl_GIF_Image.H  Fl_Gl_Window.H  Fl_Group.H  Fl_Help_Dialog.H  Fl_Help_View.H  Fl_Image.H  Fl_Image_Surface.H  Fl_Input_.H  Fl_Input_Choice.H  Fl_JPEG_Image.H  Fl_Menu_.H  Fl_Menu_Bar.H  Fl_Menu_Button.H  Fl_Menu_Item.H  Fl_Multi_Browser.H  Fl_Multi_Label.H  Fl_Multiline_Input.H  Fl_Native_File_Chooser.H  Fl_Paged_Device.H  Fl_Plugin.H  Fl_PostScript.H  Fl_Preferences.H  Fl_Printer.H  Fl_Radio_Button.H  Fl_Radio_Light_Button.H  Fl_Radio_Round_Button.H  Fl_Round_Button.H  (+33 more)
include/JoSIM/: AnalysisType.hpp  BasicComponent.hpp  CCCS.hpp  CCVS.hpp  Capacitor.hpp  CliOptions.hpp  Components.hpp  Constants.hpp  CurrentSource.hpp  Errors.hpp  FileOutputType.hpp  Function.hpp  IV.hpp  Inductor.hpp  Input.hpp  InputType.hpp  IntegrationType.hpp  JJ.hpp  LUSolve.hpp  LineInput.hpp  Matrix.hpp  Misc.hpp  Model.hpp  MutualInductance.hpp  Netlist.hpp  Noise.hpp  Output.hpp  PJJ.hpp  ParameterName.hpp  Parameters.hpp  Parser.hpp  PhaseSource.hpp  ProgressBar.hpp  ProgressPrinter.hpp  RelevantTrace.hpp  Resistor.hpp  Rng.hpp  Simulation.hpp  Spread.hpp  Transient.hpp  (+32 more)
include/matplotlib/: matplotlibcpp.h
include/slu/: superlu_enum_consts.h
include/suitesparse/: SuiteSparseQR.hpp  SuiteSparseQR_C.h  SuiteSparseQR_definitions.h  SuiteSparse_config.c  SuiteSparse_config.h  amd.h  amd_internal.h  btf.h  btf_internal.h  camd.h  camd_internal.h  ccolamd.h  cholmod.h  cholmod_blas.h  cholmod_camd.h  cholmod_check.h  cholmod_cholesky.h  cholmod_complexity.h  cholmod_config.h  cholmod_core.h  cholmod_function.h  cholmod_gpu.h  cholmod_gpu_kernels.h  cholmod_internal.h  cholmod_io64.h  cholmod_matrixops.h  cholmod_modify.h  cholmod_partition.h  cholmod_supernodal.h  cholmod_template.h  colamd.h  klu.h  klu_internal.h  klu_version.h  ldl.h  metis.h  spqr.hpp  spqrgpu.hpp  umfpack.h  umfpack_col_to_triplet.h  (+31 more)
javascripts/: config.js
jp/bugs_jp/: index.html
jp/comp_stamps_jp/: index.html
jp/ex_usage_jp/: index.html
jp/index_jp/: index.html
jp/syntax_jp/: index.html
jp/tech_disc_jp/: index.html
lib/linux/: FindSuiteSparse.cmake
lib/win/: SuperLU_v3.1_vs_dbg_x64.lib
objs/: components.opp  errors.opp  input.opp  josim.opp  misc.opp
python/: CMakeLists.txt
python/src/: j_input.cpp  j_matrix.cpp  j_output.cpp  j_simulation.cpp  pyjosim.cpp
scripts/: JoSIM_n++_UDL.xml  ivcurve.py  josim-plot  josim-plot.py  josim-plot2.py  noise_insert.py  plot  plot-compare.py  plotall.py  runall  runall.py  runallgear.py  sp_generator.py
search/: search_index.json
site/: 404.html  index.html  refer.bib  search.html  sitemap.xml
site/bugs/: index.html
site/comp_stamps/: index.html
site/syntax/: index.html
site/tech_disc/: index.html
src/: CCCS.cpp  CCVS.cpp  CMakeLists.txt  Capacitor.cpp  CliOptions.cpp  Components.cpp  CurrentSource.cpp  Errors.cpp  Function.cpp  IV.cpp  Inductor.cpp  Input.cpp  JJ.cpp  LUSolve.cpp  Matrix.cpp  Misc.cpp  Model.cpp  MutualInductance.cpp  Netlist.cpp  Noise.cpp  Output.cpp  PJJ.cpp  Parameters.cpp  Parser.cpp  PhaseSource.cpp  RelevantTrace.cpp  Resistor.cpp  Rng.cpp  Simulation.cpp  Spread.cpp  Transient.cpp  TransmissionLine.cpp  VCCS.cpp  VCVS.cpp  Verbose.cpp  VoltageSource.cpp  components.cpp  errors.cpp  input.cpp  j_args.cpp  (+16 more)
src/josim_vs/: josim.sln  josim.vcxproj  josim.vcxproj.filters
syntax/: index.html
tech_disc/: index.html
test/: 4bitksa_hand_ptl.cir  4bitksa_hand_ptl.js  CMakeLists.txt  GenPPipht.cir  GenPPipht.js  TEST_MITLL_DFFT.cir  TEST_MITLL_XORT.cir  aqfp10ghz.js  aqfp5ghz.js  basic_jtl.cir  basic_jtl.js  command_test_file.js  dcsfq_jtl_sink  dcsfq_jtl_sink.js  ex_dcsfq_jtl_sink.cir  ex_gen_pp_ipht.cir  ex_jj_char.cir  ex_jj_iv.cir  ex_jj_iv_tmp.cir  ex_jj_pump.cir  ex_jtl_1kA.cir  ex_jtl_basic.cir  ex_jtl_param_times.cir  ex_jtl_string.cir  ex_ksa4bit.cir  ex_ksa4bit.csv  ex_mitll_dff_wr.cir  ex_mitll_not_wr.csv  ex_mitll_xor_wr.cir  ex_mitll_xor_wr.csv  ex_mut_test.cir  ex_pi_DQFP_buffer_chan.cir  ex_pi_DQFP_inverter_chain.cir  ex_ps_jtl.cir  ex_xline_test.cir  gtjj_iv.cir  jj_characteristics.cir  jj_characteristics.js  jj_error.cir  jj_error.js  (+25 more)
test/comp/: capacitor.cir  cccs.cir  ccvs.cir  inductor.cir  jj.cir  mutual.cir  ps.cir  resistor.cir  test_inductor.cir  test_inductor.csv  test_resistor.cir  test_resistor.csv  tx.cir  vccs.cir  vcvs.cir  vs.cir
test/param/: test_param_nest.cir  test_param_undef.cir
test/reference/: ex_dcsfq_jtl_sink.csv  ex_dcsfq_jtl_sink_phase.csv  ex_gen_pp_ipht.csv  ex_gen_pp_ipht_phase.csv  ex_jtl_basic.csv  ex_jtl_basic_phase.csv  ex_jtl_string.csv  ex_jtl_string_phase.csv  ex_ksa4bit.csv  ex_ksa4bit_phase.csv  ex_mitll_dff_wr.csv  ex_mitll_dff_wr_phase.csv  ex_mitll_xor_wr.csv  ex_mitll_xor_wr_phase.csv
test/syntax/: test_line_comment.cir  test_line_cont.cir  (+1 more)
(+122 files in other folders)
